--- a/kino/app/reservation/style.css
+++ b/kino/app/reservation/style.css
@@ -19,3 +19,9 @@
   display: inline-block;
   margin: 3px;
 }
+input[type="text"] {
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  box-sizing: border-box;
+}
