--- a/kino/app/reservation/style.css
+++ b/kino/app/reservation/style.css
@@ -4,6 +4,7 @@
   background-color: gray;
   display: inline-block;
   margin: 3px;
+  border-radius: 20%;
 }
 .seatSelected {
   width: 20px;
@@ -11,6 +12,7 @@
   background-color: green;
   display: inline-block;
   margin: 3px;
+  border-radius: 20%;
 }
 .occupied {
   width: 20px;
@@ -18,6 +20,7 @@
   background-color: red;
   display: inline-block;
   margin: 3px;
+  border-radius: 20%;
 }
 input[type="text"] {
   width: 100%;
