--- a/kino/app/reservation/style.css
+++ b/kino/app/reservation/style.css
@@ -28,3 +28,9 @@ input[type="text"] {
   margin: 8px 0;
   box-sizing: border-box;
 }
+.noPlace {
+  width: 20px;
+  height: 20px;
+  display: inline-block;
+  margin: 3px;
+}
